Fix width on mobile/desktop for graph

--- a/src/components/PriceGraph/priceGraph.css
+++ b/src/components/PriceGraph/priceGraph.css
@@ -14,7 +14,13 @@
 .graph-container {
   @apply w-full;
 
-  height: 400px;
+  height: 300px;
+}
+
+@media screen and (min-width: 768px) {
+  .graph-container {
+    height: 500px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
